updated done form 230622 04:10 PM

--- a/src/assets/scss/form-component.css
+++ b/src/assets/scss/form-component.css
@@ -461,6 +461,9 @@ fieldset[disabled] .form-control {
   border-color: #adadad;
 }
 
+.invalid-feedback {
+  display: block !important;
+}
 @media (min-width: 576px) {
   .modal-dialog {
     max-width: 600px !important;
